--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,13 @@
+@font-face {
+  font-family: 'HindSiliguri';
+  src: url('../fonts/Hind_Siliguri/HindSiliguri-Regular.ttf') format('truetype'),
+    url('../fonts/Hind_Siliguri/HindSiliguri-Bold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+}
+
 body {
   background-color: black;
   color: white;
+  font-family: 'HindSiliguri';
 }
