--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -10,9 +10,23 @@
   align-self: center;
 }
 
-.description {
+.description,
+.hours {
   max-width: 50%;
   align-self: center;
   margin-top: 50px;
   line-height: 40px;
+}
+
+.hours {
+  line-height: 20px;
+}
+
+.hours h2 {
+  align-self: center;
+}
+
+.hours li {
+  list-style-type: none;
+  padding-left: 0;
 }
