Finished the styling for certain parts of the home module

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -11,22 +11,28 @@
 }
 
 .description,
-.hours {
+.hours,
+.address {
   max-width: 50%;
+  min-width: 50%;
   align-self: center;
-  margin-top: 50px;
   line-height: 40px;
 }
 
-.hours {
-  line-height: 20px;
+.description {
+  align-self: center;
 }
 
-.hours h2 {
-  align-self: center;
+.hours {
+  /* display: flex; */
+  line-height: 20px;
 }
 
 .hours li {
   list-style-type: none;
   padding-left: 0;
+}
+
+.address p {
+  padding-left: 40px;
 }
