--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,3 +1,19 @@
 #contact-module {
-  color: blue;
+  padding: 50px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-info {
+  padding: 20px;
+}
+
+.contact-info a {
+  text-decoration: none;
+}
+
+a:visited {
+  color: white;
 }
